Creating a simple main menu

--- a/BattleTank/BattleTank.uproject
+++ b/BattleTank/BattleTank.uproject
@@ -9,5 +9,11 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "Wwise",
+			"Enabled": false
+		}
 	]
 }
