--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,10 +1,8 @@
-[/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=017AF41F4394279B0E4E4E97A31CABA0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="")
+StagingDirectory=(Path="D:/Agata")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -34,7 +32,8 @@ bEncryptIniFiles=False
 bEncryptPakIndex=False
 bSkipEditorContent=False
 bSkipMovies=False
-+DirectoriesToAlwaysStageAsUFS=(Path="WwiseAudio")
++MapsToCook=(FilePath="/Game/Levels/BattleGround")
++MapsToCook=(FilePath="/Game/BattleGround_sharedassets/MainMenu")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
