--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -1,15 +1,6 @@
-[URL]
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
-
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
-GlobalDefaultGameMode=/Game/BattleTankGameModeBase_BP.BattleTankGameModeBase_BP_C
+GameDefaultMap=/Game/BattleGround_sharedassets/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/BattleGround.BattleGround
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
